# apps/server/src/api/components/user/user-controller.ts
@@ -1,10 +1,10 @@
-/* eslint-disable @typescript-eslint/no-explicit-any */
 import express from 'express'
-import { CREATED, OK } from 'http-status'
+import * as httpStatus from 'http-status'
 import {
   Body,
   Controller,
   Delete,
+  Example,
   Get,
   Middlewares,
   Path,
@@ -14,16 +14,17 @@ import {
   Request,
   Response,
   Route,
+  SuccessResponse,
   Tags,
 } from 'tsoa'
 import { inject, injectable } from 'tsyringe'
 
 import { IPaginationService } from '../../../services'
 import { validationMiddleware } from '../../middlewares'
-import { APIErrorResponse, APIPaginatedEntityResponse } from '../../shared'
-import { paginationQueryParamsValidator, userValidator } from '../../validators'
+import { APIErrorResponse, APIPaginationResponse } from '../../shared'
+import { paginationParamsValidator, userValidator } from '../../validators'
 import { UserMapper } from './user-mapper'
-import { UserDTO } from './user-models'
+import { UserDTO, UserRequest } from './user-models'
 import { IUserService } from './user-service'
 
 @injectable()
@@ -42,7 +43,8 @@ class UserController extends Controller {
    * API endpoint used to create a new user.
    */
   @Post('/')
-  @Response<UserDTO>('201', 'Created', {
+  @SuccessResponse('201', 'Created')
+  @Example<UserDTO>({
     id: 'XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX',
     name: 'name',
     email: 'email@email.com',
@@ -53,11 +55,11 @@ class UserController extends Controller {
     isOperational: false,
   })
   @Middlewares(validationMiddleware(userValidator))
-  public async addUser(@Body() body: any): Promise<UserDTO> {
+  public async addUser(@Body() body: UserRequest): Promise<UserDTO> {
     const user = UserMapper.toDomain(body)
     const registeredUser = await this.userService.registerUser(user)
     const userDTO = UserMapper.toDTO(registeredUser)
-    this.setStatus(CREATED)
+    this.setStatus(httpStatus.CREATED)
     return userDTO
   }
 
@@ -70,13 +72,13 @@ class UserController extends Controller {
   // }
 
   /**
-   * API endpoint used to fetch users usgn page-based pagination schema.
-   * Supply the page and limit pagination parameters and receive the selecting users.
+   * API endpoint used to get users through page-based pagination schema.
    * @param page The number of the page. If isn't provided, it will be set to 1.
    * @param limit The number of records per page. If isn't provided, it will be set to 1.
    */
   @Get('/')
-  @Response<APIPaginatedEntityResponse<UserDTO>>('200', 'OK', {
+  @SuccessResponse('200', 'OK')
+  @Example<APIPaginationResponse<UserDTO>>({
     page: 1,
     limit: 1,
     totalPages: 1,
@@ -89,14 +91,19 @@ class UserController extends Controller {
       },
     ],
   })
-  @Middlewares(validationMiddleware(paginationQueryParamsValidator))
-  public async fetchUserListWithPagination(
+  @Response<APIErrorResponse>('500', 'Internal Server Error', {
+    message: 'Internal Server Error',
+    details: { context: undefined, cause: undefined },
+    isOperational: false,
+  })
+  @Middlewares(validationMiddleware(paginationParamsValidator))
+  public async fetchUsers(
     @Request() req: express.Request,
     @Query() page?: number,
     @Query() limit?: number,
-  ): Promise<APIPaginatedEntityResponse<UserDTO>> {
+  ): Promise<APIPaginationResponse<UserDTO>> {
     const baseURL = `${req.protocol}://${req.get('host')}${req.originalUrl}`
-    const parsedQuery = paginationQueryParamsValidator.parse({
+    const parsedQuery = paginationParamsValidator.parse({
       query: { page: page, limit: limit },
     })
     const [retrievedUserList, totalRecords] =
@@ -110,36 +117,78 @@ class UserController extends Controller {
       totalRecords: totalRecords,
       records: retrievedUserList.map((u) => UserMapper.toDTO(u)),
     }
-    this.setStatus(OK)
+    this.setStatus(httpStatus.OK)
     return this.paginationService.createResponse(baseURL, paginationConfig)
   }
 
+  /**
+   * API endpoint used to get a user by its ID.
+   */
   @Get('{userId}')
+  @SuccessResponse('200', 'OK')
+  @Example<UserDTO>({
+    id: 'XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX',
+    name: 'name',
+    email: 'email@email.com',
+  })
+  @Response<APIErrorResponse>('500', 'Internal Server Error', {
+    message: 'Internal Server Error',
+    details: { context: undefined, cause: undefined },
+    isOperational: false,
+  })
   public async fetchUser(@Path() userId: string): Promise<UserDTO> {
     const retrievedUser = await this.userService.retrieveUser(userId)
     const userDTO = UserMapper.toDTO(retrievedUser)
-    this.setStatus(OK)
+    this.setStatus(httpStatus.OK)
     return userDTO
   }
 
+  /**
+   * API endpoint used to update a user by its ID.
+   */
   @Put('{userId}')
+  @SuccessResponse('200', 'OK')
+  @Example<UserDTO>({
+    id: 'XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX',
+    name: 'name',
+    email: 'email@email.com',
+  })
+  @Response<APIErrorResponse>('500', 'Internal Server Error', {
+    message: 'Internal Server Error',
+    details: { context: undefined, cause: undefined },
+    isOperational: false,
+  })
   @Middlewares(validationMiddleware(userValidator))
   public async renewUser(
     @Path() userId: string,
-    @Body() body: any,
+    @Body() body: UserRequest,
   ): Promise<UserDTO> {
     const user = UserMapper.toDomain(body)
     const replacedUser = await this.userService.replaceUser(userId, user)
     const userDTO = UserMapper.toDTO(replacedUser)
-    this.setStatus(OK)
+    this.setStatus(httpStatus.OK)
     return userDTO
   }
 
+  /**
+   * API endpoint used to delete a user by its ID.
+   */
   @Delete('{userId}')
+  @SuccessResponse('200', 'OK')
+  @Example<UserDTO>({
+    id: 'XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX',
+    name: 'name',
+    email: 'email@email.com',
+  })
+  @Response<APIErrorResponse>('500', 'Internal Server Error', {
+    message: 'Internal Server Error',
+    details: { context: undefined, cause: undefined },
+    isOperational: false,
+  })
   public async destroyUser(@Path() userId: string): Promise<UserDTO> {
     const deletedUser = await this.userService.removeUser(userId)
     const userDTO = UserMapper.toDTO(deletedUser)
-    this.setStatus(OK)
+    this.setStatus(httpStatus.OK)
     return userDTO
   }
 }
